--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOTYPE  html>
 <html>
   <body>
-      <h1>this is a heading on my websit
-      <
-      <
+      <h1>MOVIES!!!
+      <p>i am macking a website abuot MOVIES!
+      <p>I LOVE MOVIES!!!!
       
