--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
       <h1>MOVIES!!!
       <p>i am macking a website abuot MOVIES!
       <p>I LOVE MOVIES!!!!
-      
+        </body>
+    </html>
