--- a/index.html
+++ b/index.html
@@ -6,3 +6,15 @@
       <p>I LOVE MOVIES!!!!
         </body>
     </html>
+        <p>movie genres!
+        <p>and movies
+        <p>horror
+        <p>
+        <p>
+        <p>
+        <p>
+        <p>
+        <p>  
+        <p>
+        <p>
+        <p>  
