--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <p>I LOVE MOVIES!!!!
         </body>
     </html>
-        <p>movie genres!
-        <p>and movies
+        <p>movie genres and movies!
+       
         <p>horror
         <p>
         <p>
