--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <p>I LOVE MOVIES!!!!
         </body>
     </html>
-        <p>movie genres and movies!
+        <p>movie genres!
       
         <p>                                           MOVIVES
           
