--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOTYPE  html>
 <html>
   <body>
-      <h1>MOVIES!!!
+    <h1>MOVIES!!!</h1>
       <p>i am macking a website abuot MOVIES!
       <p>I LOVE MOVIES!!!!
         </body>
-    </html>
+    
         <p>movie genres!
       
         <p>                                           MOVIES
